--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,4 +1,4 @@
-.searchbar {
+.Searchbar {
   top: 0;
   left: 0;
   position: sticky;
@@ -17,7 +17,7 @@
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.form {
+.SearchForm {
   display: flex;
   align-items: center;
   width: 100%;
@@ -27,7 +27,38 @@
   overflow: hidden;
 }
 
-.input {
+.SearchFormButton {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  border: 0;
+  background-image: url('../../../public/search.svg');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.6;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  outline: none;
+}
+
+.SearchFormButton:hover {
+  opacity: 1;
+}
+
+.SearchFormButtonLabel {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
+.SearchFormInput {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -38,22 +69,7 @@
   padding-right: 4px;
 }
 
-.button {
-  display: inline-block;
-  background-color: cornflowerblue;
-  color: white;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
-  outline: none;
-  margin-right: 15px;
-  padding: 5px 15px;
-  font-size: 15px;
-  letter-spacing: 0.1em;
-  opacity: 0.8;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover {
-  opacity: 1;
+.SearchFormInput::placeholder {
+  font: inherit;
+  font-size: 18px;
 }
