--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
-
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -20,6 +18,7 @@ body {
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #4b525a;
 }
 
 img {
@@ -27,8 +26,3 @@ img {
   max-width: 100%;
   height: auto;
 }
-
-ul,li {
-  list-style-type: none;
-}
-
